force-app/main/default/objects/Quote/fields/Annual_Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_USD__c</fullName>
    <description>Annual Total converted to USD using locked exchange rate - provides consistent USD reporting for Quotes regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(Annual_Total__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Total converted to USD using the locked exchange rate. Updates automatically when exchange rate or annual total changes.</inlineHelpText>
    <label>Annual Total (USD)</label>
    <type>Text</type>
</CustomField>