force-app/main/default/objects/Quote/fields/Exchange_Rate_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_at_Creation__c</fullName>
    <description>Exchange rate set at Quote creation using current rate, then locked at approval to maintain currency consistency throughout the quote-to-opportunity-to-asset lifecycle</description>
    <label>Exchange Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>