force-app/main/default/objects/Quote/fields/First_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Due__c</fullName>
    <description>First installment based on billing frequency and prorated total; one-off charges fully due in first payment</description>
    <formula>IF(ISNULL(First_Payment_Due_Override__c), 
CASE(
  TEXT(Billing_Frequency__c),
  &quot;Monthly&quot;,
    (Annual_Total__c / 12) + IF(ISNULL(One_Off_Charges__c), 0, One_Off_Charges__c),
  &quot;Quarterly&quot;,
    (Annual_Total__c / 4) + IF(ISNULL(One_Off_Charges__c), 0, One_Off_Charges__c),
  &quot;Semi-Annual&quot;,
    (Annual_Total__c / 2) + IF(ISNULL(One_Off_Charges__c), 0, One_Off_Charges__c),
  &quot;Annually&quot;,
    Annual_Total__c + IF(ISNULL(One_Off_Charges__c), 0, One_Off_Charges__c),
  &quot;One-time&quot;,
    Total_Payment_Due__c,
  Annual_Total__c + IF(ISNULL(One_Off_Charges__c), 0, One_Off_Charges__c)
),
First_Payment_Due_Override__c)</formula>
    <label>First Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>