force-app/main/default/objects/Quote/fields/First_Payment_Due_USD__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Due_USD__c</fullName>
    <description>First Payment Due converted to USD using locked exchange rate - provides consistent USD reporting for Quotes regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(First_Payment_Due__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Payment Due converted to USD using the locked exchange rate. Updates automatically when exchange rate or first payment due changes.</inlineHelpText>
    <label>First Payment Due (USD)</label>
    <type>Text</type>
</CustomField>