force-app/main/default/objects/Quote/fields/One_Off_Charges_USD__c.field-meta.xml
<CustomField>
    <fullName>One_Off_Charges_USD__c</fullName>
    <description>One Off Charges converted to USD using locked exchange rate - provides consistent USD reporting for Quotes regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(One_Off_Charges__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>One Off Charges converted to USD using the locked exchange rate. Updates automatically when exchange rate or one off charges changes.</inlineHelpText>
    <label>One Off Charges (USD)</label>
    <type>Text</type>
</CustomField>