force-app/main/default/objects/Quote/fields/Total_Payment_Due_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Due_USD__c</fullName>
    <description>Total Payment Due converted to USD using locked exchange rate - provides consistent USD reporting for Quotes regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(Total_Payment_Due__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Payment Due converted to USD using the locked exchange rate. Updates automatically when exchange rate or total payment due changes.</inlineHelpText>
    <label>Total Payment Due (USD)</label>
    <type>Text</type>
</CustomField>