force-app/main/default/objects/Quote/fields/TotalPrice_USD__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice_USD__c</fullName>
    <description>TotalPrice converted to USD using locked exchange rate - provides consistent USD reporting for Quotes regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(TotalPrice * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TotalPrice converted to USD using the locked exchange rate. Updates automatically when exchange rate or total price changes.</inlineHelpText>
    <label>TotalPrice (USD)</label>
    <type>Text</type>
</CustomField>