force-app/main/default/objects/Quote/validationRules/Pass_Draft_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_Draft_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(
    ISPICKVAL( Status , &quot;Draft&quot;)
),
    ISBLANK(  Contract_Signer__c ),
    ISBLANK(TEXT( Billing_Frequency__c)),
    ISBLANK(TEXT( POC_Status__c )),
    ISBLANK(TEXT( Payment_Terms__c ))
)</errorConditionFormula>
    <errorMessage>Contract Signer, Contract Billing Frequency, PO Status, Payment Terms fields must be complete to pass Draft stage</errorMessage>
</ValidationRule>