force-app/main/default/objects/Quote/validationRules/Reject_Quotes_Cant_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_Quotes_Cant_Be_Edited</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Rejected__c,
NOT( $Profile.Name=&quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>Rejected quotes cannot be edited. Please create a new quote and submit for approval.</errorMessage>
</ValidationRule>