force-app/main/default/objects/Quote/validationRules/VR_Quote_Status_Progression_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Quote_Status_Progression_Control</fullName>
    <active>true</active>
    <description>Enforces proper quote status progression: Draft/Rejected &gt; Needs Review, Approved &gt; Presented, Presented &gt; Accepted/Denied</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    NOT(OR(
        $Profile.Name=&quot;System Administrator&quot;,
        $User.Division=&quot;Finance&quot;,
        TEXT($User.UserType)=&quot;AutomatedProcess&quot;
    )),
    NOT(OR(
        /* Allow Draft to Needs Review */
        AND(
            ISPICKVAL(PRIORVALUE(Status), &quot;Draft&quot;),
            ISPICKVAL(Status, &quot;Needs Review&quot;)
        ),
        /* Allow Rejected to Needs Review */
        AND(
            ISPICKVAL(PRIORVALUE(Status), &quot;Rejected&quot;),
            ISPICKVAL(Status, &quot;Needs Review&quot;)
        ),
        /* Allow Approved to Presented */
        AND(
            ISPICKVAL(PRIORVALUE(Status), &quot;Approved&quot;),
            ISPICKVAL(Status, &quot;Presented&quot;)
        ),
        /* Allow Presented to Accepted */
        AND(
            ISPICKVAL(PRIORVALUE(Status), &quot;Presented&quot;),
            ISPICKVAL(Status, &quot;Accepted&quot;)
        ),
        /* Allow Presented to Denied */
        AND(
            ISPICKVAL(PRIORVALUE(Status), &quot;Presented&quot;),
            ISPICKVAL(Status, &quot;Denied&quot;)
        )
    ))
)</errorConditionFormula>
    <errorMessage>Invalid quote status change. Users can only move quotes: Draft/Rejected → Needs Review, Approved → Presented, Presented → Accepted/Denied. Approval process statuses (In Review, Approved, Rejected) are set automatically by flows.</errorMessage>
</ValidationRule>